fixing service page image spacing

--- a/STYLEM.css
+++ b/STYLEM.css
@@ -111,7 +111,8 @@
 		margin:auto;
 		width:100%;
 		display:grid;
-		grid-template-columns: repeat(3,15%);
+		grid-template-columns: repeat(3,55%);
+		gap:5%;
 		justify-content: center;
 	}
 	.sitew{
